[gd_scene load_steps=18 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Main Menu/8bitOperatorPlus8-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main/Textures/bgmain.jpg" type="Texture" id=3]
[ext_resource path="res://Main/Textures/Win.wav" type="AudioStream" id=4]
[ext_resource path="res://Main/Textures/Lost.wav" type="AudioStream" id=5]
[ext_resource path="res://Main/Textures/Tie.wav" type="AudioStream" id=6]
[ext_resource path="res://Main/Textures/Card.wav" type="AudioStream" id=7]
[ext_resource path="res://Main/Textures/ButtonSound.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[node name="Game" type="Node2D" groups=["cards"]]
position = Vector2( -14, -10 )
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_left = 349.573
margin_top = 167.416
margin_right = 705.573
margin_bottom = 349.416
custom_colors/title_color = Color( 1, 0, 0, 1 )
custom_fonts/title_font = SubResource( 8 )
window_title = "GAME OVER"

[node name="NewGame" type="Button" parent="WindowDialog"]
margin_left = 183.427
margin_top = 129.584
margin_right = 327.427
margin_bottom = 162.584
custom_fonts/font = SubResource( 9 )
text = "New game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="Label" parent="WindowDialog"]
margin_left = 50.427
margin_top = 25.584
margin_right = 195.427
margin_bottom = 93.584
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="WindowDialog"]
margin_left = 26.427
margin_top = 128.584
margin_right = 170.427
margin_bottom = 161.584
custom_fonts/font = SubResource( 9 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table" type="TextureRect" parent="."]
modulate = Color( 0.411765, 0.713726, 0.384314, 1 )
margin_left = 13.0
margin_top = 11.0
margin_right = 1046.0
margin_bottom = 611.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="Hit" type="Button" parent="."]
modulate = Color( 0.392157, 0.886275, 0.305882, 1 )
margin_left = 337.0
margin_top = 528.0
margin_right = 443.0
margin_bottom = 566.0
custom_fonts/font = SubResource( 5 )
text = "Hit"

[node name="Pass" type="Button" parent="."]
modulate = Color( 0.392157, 0.886275, 0.305882, 1 )
margin_left = 468.0
margin_top = 527.0
margin_right = 573.0
margin_bottom = 567.0
custom_fonts/font = SubResource( 6 )
text = "Pass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Double" type="Button" parent="."]
modulate = Color( 0.392157, 0.886275, 0.305882, 1 )
margin_left = 605.0
margin_top = 526.0
margin_right = 710.0
margin_bottom = 566.0
custom_fonts/font = SubResource( 6 )
text = "Double"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
modulate = Color( 0.392157, 0.886275, 0.305882, 1 )
margin_left = 398.041
margin_top = 466.857
margin_right = 637.041
margin_bottom = 513.857
custom_fonts/font = SubResource( 7 )
text = "Start"

[node name="DealerCount" type="Label" parent="."]
margin_left = 436.0
margin_top = 16.0
margin_right = 622.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )

[node name="PlayerName" type="Label" parent="."]
margin_left = 31.0
margin_top = 436.0
margin_right = 194.0
margin_bottom = 479.0
custom_fonts/font = SubResource( 2 )
text = "Player"

[node name="PlayerCount" type="Label" parent="."]
margin_left = 31.0
margin_top = 483.0
margin_right = 165.0
margin_bottom = 531.0
custom_fonts/font = SubResource( 3 )
text = "Count"

[node name="Money" type="Label" parent="."]
margin_left = 821.0
margin_top = 459.0
margin_right = 955.0
margin_bottom = 507.0
custom_fonts/font = SubResource( 3 )
text = "Money"

[node name="CardCounter" type="Label" parent="."]
margin_left = 817.0
margin_top = 522.0
margin_right = 951.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 3 )
text = "Card counter:"

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="TieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="LossSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="CardSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="WindowDialog/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="WindowDialog/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Hit" to="." method="_on_Hit_pressed"]
[connection signal="pressed" from="Pass" to="." method="_on_Pass_pressed"]
[connection signal="pressed" from="Double" to="." method="_on_Double_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
